# cloud_storage

./: README.md  cloud_disk.sql
app/: CMakeLists.txt  main.cpp
lib/nginx-1.21.2/objs/: Makefile  autoconf.err  ngx_auto_config.h  ngx_modules.c
mysql/: docker-compose.yaml
mysql/data/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
mysql/data/#innodb_redo/: #ib_redo9
mysql/data/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
mysql/data/cloud_storage/: file_info.ibd  share_file_list.ibd  user.ibd  user_file_count.ibd  user_file_list.ibd
mysql/data/mysql/: general_log_213.sdi  slow_log_214.sdi
mysql/data/performance_schema/: accounts_145.sdi  binary_log_trans_189.sdi  cond_instances_82.sdi  data_lock_waits_161.sdi  data_locks_160.sdi  error_log_83.sdi  events_errors_su_139.sdi  events_errors_su_140.sdi  events_errors_su_141.sdi  events_errors_su_142.sdi  events_errors_su_143.sdi  events_stages_cu_111.sdi  events_stages_hi_112.sdi  events_stages_hi_113.sdi  events_stages_su_114.sdi  events_stages_su_115.sdi  events_stages_su_116.sdi  events_stages_su_117.sdi  events_stages_su_118.sdi  events_statement_119.sdi  events_statement_120.sdi  events_statement_121.sdi  events_statement_122.sdi  events_statement_123.sdi  events_statement_124.sdi  events_statement_125.sdi  events_statement_126.sdi  events_statement_127.sdi  events_statement_128.sdi  events_statement_129.sdi  events_statement_130.sdi  events_transacti_131.sdi  events_transacti_132.sdi  events_transacti_133.sdi  events_transacti_134.sdi  events_transacti_135.sdi  events_transacti_136.sdi  events_transacti_137.sdi  (+72 more)
redis/: docker-compose.yaml  redistest  redistest.c
redis/conf/: redis.conf
redis/data/: dump.rdb
(+3 files in other folders)
